--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -15,5 +15,27 @@ nav {
     cursor: pointer;
     padding: 0 20px;
     color: #012970;
+    position: relative;
   }
+  .drop-down {
+    position: absolute;
+    padding: 20px;
+    background-color: #fff;
+    z-index: 999;
+    width: 90%;
+    transform: translateY(80%);
+    .menu-item {
+      margin-bottom: 10px;
+      font-size: 17px;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+  }
+}
+.closer {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  z-index: 888;
 }
