--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -23,7 +23,7 @@
   ul {
     li {
       list-style: none;
-      padding: 8px 0;
+      padding: 8px 30px;
       margin: 6px 0;
       transition: 0.3s;
       &.active {
