--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -40,7 +40,8 @@
     font-weight: 600;
   }
   .leveling {
-    display: flex;
+    display: grid;
+    grid-template-columns: 15% 70%;
     gap: 20px;
     margin-top: 20px;
     .index-level {
@@ -81,7 +82,7 @@
   .level-info {
     h6 {
       font-weight: 700;
-      font-size: 20px;
+
       line-height: 32px;
       &.primary {
         color: #4a92fe;
@@ -92,7 +93,6 @@
     }
     p {
       color: #939393;
-      font-size: 16px;
       line-height: 24px;
     }
   }
