--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -1,12 +1,13 @@
 .side-bar {
   background-color: #fff;
   height: 100vh;
-  box-shadow: 0px 0px 20px 0px #0129701a;
+  box-shadow: 0px 20px 20px 0px #0129701a;
   position: relative;
   padding: 20px 0;
+  width: 100%;
   .show-hide {
     position: absolute;
-    top: 30px;
+    top: 40px;
     right: 0;
     display: flex;
     align-items: center;
@@ -60,20 +61,70 @@
     align-items: center;
     justify-content: center;
     &.active {
-      transform: translateX(0px);
-      img {
-        transform: scale(1.3);
+      transform: translateX(10px);
+      a {
+        font-size: 17px;
+        font-weight: 700;
       }
     }
     &:hover {
-      transform: translateX(0px);
-      img {
-        transform: scale(1.3);
+      transform: translateX(10px);
+      a {
+        font-size: 17px;
+        font-weight: 700;
       }
+    }
+    span {
+      display: none;
     }
   }
   img {
-    width: 15px;
-    transition: 0.4s linear;
+    width: 20px;
+  }
+}
+@media (max-width: 500px) {
+  .side-bar {
+    position: absolute;
+    width: 100vw;
+    left: 0;
+    z-index: 99;
+    transform: translateY(-110%);
+    transition: 0.2s;
+    &.hide {
+      z-index: 99999;
+      transform: translateY(0);
+      opacity: 1;
+      li {
+        display: flex;
+        justify-content: start;
+        padding-left: 30px;
+        span {
+          display: block;
+        }
+      }
+      .show-hide {
+        top: auto;
+        left: 0;
+        bottom: 100px;
+        transform: translateY(0%);
+        width: 100px;
+        height: 30px;
+        i {
+          transform: rotate(270deg);
+        }
+      }
+    }
+    .show-hide {
+      top: auto;
+      left: 0;
+      bottom: -10%;
+      transform: translateY(100%);
+
+      width: 100px;
+      height: 30px;
+      i {
+        transform: rotate(-90deg);
+      }
+    }
   }
 }
