--- a/src/pages/setting/setting.scss
+++ b/src/pages/setting/setting.scss
@@ -6,3 +6,8 @@ form {
   box-shadow: 0px 0px 30px 0px #0000001a;
   border-radius: 6px;
 }
+@media (max-width: 500px) {
+  form {
+    width: 100%;
+  }
+}
