--- a/src/pages/test/test.scss
+++ b/src/pages/test/test.scss
@@ -1,12 +1,9 @@
 .test-page {
   width: 100%;
   height: 90vh;
-  overflow-y: scroll;
 }
 
 .test-list {
-  display: grid;
-  grid-template-columns: 70% 20%;
   align-items: center;
   justify-content: space-between;
   background-color: #fff;
@@ -14,4 +11,12 @@
   box-shadow: 0px 0px 30px 0px #0000001a;
   margin-top: 20px;
   border-radius: 6px;
+}
+@media (max-width: 500px) {
+  .dot-line {
+    div {
+      width: 10px;
+      height: 10px;
+    }
+  }
 }
