--- a/src/pages/test/tests/quiz/quiz.scss
+++ b/src/pages/test/tests/quiz/quiz.scss
@@ -15,9 +15,24 @@
       border: 4px solid #0d6efd;
       background-color: #0d6efd;
       border-radius: 45pc;
-      transform: translateY(-30%);
+      transform: translateY(-35%);
       &.current {
         background-color: #fff;
+      }
+    }
+  }
+}
+@media (max-width: 500px) {
+  .quiz-wrapper {
+    .dot-line {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      div {
+        width: 10px;
+        height: 10px;
+        transform: translateY(0);
+        border: 2px solid #0d6efd;
       }
     }
   }
