--- a/src/pages/test/tests/quiz/quiz.scss
+++ b/src/pages/test/tests/quiz/quiz.scss
@@ -1,5 +1,5 @@
 .quiz-wrapper {
-  border-top: 20px solid #0d6efd;
+  border-top: solid #0d6efd;
   .dot-line {
     position: relative;
     width: 100%;
