--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -74,7 +74,7 @@
         font-weight: 700;
       }
     }
-    span {
+    span.item {
       display: none;
     }
   }
@@ -98,7 +98,7 @@
         display: flex;
         justify-content: start;
         padding-left: 30px;
-        span {
+        span.item {
           display: block;
         }
       }
