--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -54,6 +54,7 @@
   }
 }
 .side-bar.hide {
+  overflow-y: hidden;
   li {
     margin-top: 10px;
     padding: 10px;
@@ -84,7 +85,7 @@
 }
 @media (max-width: 500px) {
   .side-bar {
-    position: absolute;
+    position: fixed;
     width: 100vw;
     left: 0;
     z-index: 99;
