--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -15,6 +15,7 @@
     transform: translateX(100%);
     background-color: #fff;
     font-size: 18px;
+    z-index: 999;
     padding: 5px;
     border-radius: 0 5px 5px 0;
     box-shadow: 0px 0px 20px 0px #0129701a;
@@ -54,7 +55,6 @@
   }
 }
 .side-bar.hide {
-  overflow-y: hidden;
   li {
     margin-top: 10px;
     padding: 10px;
@@ -104,8 +104,10 @@
         }
       }
       .show-hide {
+        z-index: 999;
         top: auto;
         left: 0;
+        border-radius: 0 0 5px 0;
         bottom: 100px;
         transform: translateY(0%);
         width: 100px;
