--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ body {
   height: 100vh;
   width: 100vw;
   overflow: hidden;
+  overflow-y: hidden;
 }
 .font-montserrat {
   font-family: "Montserrat", sans-serif;
